RESOLVED FIXED80299
WebAudio JSC-related fixes
https://bugs.webkit.org/show_bug.cgi?id=80299
Summary WebAudio JSC-related fixes
Philippe Normand
Reported 2012-03-05 09:43:51 PST
EventTarget is protected by #if defined(V8_BINDING) && V8_BINDING in AudioContext.idl and JavaScriptAudioNode.idl. Any reason why? Also, JSAudioContextConstructor::constructJSAudioContext doesn't wrap the returned value in a DOM wrapper, like the V8 version does.
Attachments
JSC-related WebAudio fixes (3.17 KB, patch)
2012-03-05 09:46 PST, Philippe Normand
no flags
Philippe Normand
Comment 1 2012-03-05 09:46:38 PST
Created attachment 130156 [details] JSC-related WebAudio fixes
Philippe Normand
Comment 2 2012-03-06 00:00:15 PST
Comment on attachment 130156 [details] JSC-related WebAudio fixes Clearing flags on attachment: 130156 Committed r109870: <http://trac.webkit.org/changeset/109870>
Philippe Normand
Comment 3 2012-03-06 00:00:22 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.