WebAudio JSC-related fixes https://bugs.webkit.org/show_bug.cgi?id=80299

Reviewed by Adam Barth.

* bindings/js/JSAudioContextCustom.cpp:
(WebCore::JSAudioContextConstructor::constructJSAudioContext):
Wrap the audio context in a DOM wrapper.
* webaudio/AudioContext.idl: No need to protect EventTarget by V8
guards, I think.
* webaudio/JavaScriptAudioNode.idl: Ditto.

Canonical link: https://commits.webkit.org/97508@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@109870 268f45cc-cd09-0410-ab3c-d52691b4dbfc